--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0.3"
 python-dotenv = "^1.0.1"
+djangorestframework = "^3.15.1"
 
 
 [tool.poetry.group.dev.dependencies]
