--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 djangorestframework = "^3.15.1"
 psycopg2-binary = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
+drf-yasg = "^1.21.7"
 
 [tool.black]
 target-version = ['py310']
