--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ exclude = '''
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.3.0"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+pre-commit = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core"]
