--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,12 @@ drf-yasg = "^1.21.7"
 [tool.black]
 target-version = ['py310']
 line-length = 120
+skip-string-normalization = true
 exclude = '''
 (
     | .+/migrations
+    | .+/venv
+    | .+/tests
 )
 '''
 
