--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,19 @@
 repos:
   - repo: local
     hooks:
-#      - id: isort
-#        name: isort
-#        entry: isort --settings-file ./.isort.cfg .
-#        language: system
-#        types: [python]
-#        pass_filenames: false
-#
-#      - id: black
-#        name: black
-#        entry: black --config ./.black .
-#        language: system
-#        types: [python]
-#        pass_filenames: false
+      - id: isort
+        name: isort
+        entry: isort --settings-file ./.isort.cfg .
+        language: system
+        types: [python]
+        pass_filenames: false
+
+      - id: black
+        name: black
+        entry: black --config ./.black .
+        language: system
+        types: [python]
+        pass_filenames: false
 
       - id: flake8
         name: flake8
