--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ black = "^24.3.0"
 isort = "^5.13.2"
 flake8 = "^7.0.0"
 pre-commit = "^3.7.0"
+xenon = "^0.9.1"
+bandit = "^1.7.8"
 
 [build-system]
 requires = ["poetry-core"]
