--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ djangorestframework = "^3.15.1"
 psycopg2-binary = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.7"
+elasticsearch-dsl = "8.13.1"
+django-elasticsearch-dsl = "8.0"
 
 [tool.black]
 target-version = ['py310']
