--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.7"
 elasticsearch-dsl = "8.13.1"
 django-elasticsearch-dsl = "8.0"
+python-logstash = "^0.4.8"
 
 [tool.black]
 target-version = ['py310']
